fix: 페어 매칭(1번 기능) 버그 수정